@@ -1,5 +1,7 @@
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* Makefile.am [ENABLE_TESTS]: Don't build package's program.
+
 	* output-serial.c: Include <stdbool.h>.
 
 	* Makefile.am (laden_CPPFLAGS, laden_CFLAGS, laden_LDFLAGS): Don't
